[gd_scene load_steps=4 format=3 uid="uid://8kf325oa7qos"]

[ext_resource type="Script" path="res://demo/user.gd" id="1_iyd0j"]

[sub_resource type="LobbyInfo" id="LobbyInfo_li3sw"]

[sub_resource type="LobbyPeer" id="LobbyPeer_83mr0"]

[node name="User2" type="HBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_iyd0j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Message" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Reconnection Token:"

[node name="Message2" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Game ID Override:"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Message" type="LineEdit" parent="VBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Server URL Override:"

[node name="Message2" type="LineEdit" parent="VBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CommandToggle" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 25
popup/item_0/text = "connect_to_server"
popup/item_0/id = 18
popup/item_1/text = "disconnect_from_server"
popup/item_1/id = 19
popup/item_2/text = "create_lobby"
popup/item_2/id = 0
popup/item_3/text = "join_lobby"
popup/item_3/id = 1
popup/item_4/text = "leave_lobby"
popup/item_4/id = 2
popup/item_5/text = "list_lobbies"
popup/item_5/id = 3
popup/item_6/text = "kick_peer"
popup/item_6/id = 6
popup/item_7/text = "set_lobby_ready(true)"
popup/item_7/id = 7
popup/item_8/text = "set_lobby_ready(false)"
popup/item_8/id = 8
popup/item_9/text = "set_lobby_sealed(true)"
popup/item_9/id = 5
popup/item_10/text = "set_lobby_sealed(false)"
popup/item_10/id = 9
popup/item_11/text = "send_chat_message"
popup/item_11/id = 17
popup/item_12/text = "set_peer_name"
popup/item_12/id = 12
popup/item_13/text = "add_lobby_data"
popup/item_13/id = 15
popup/item_14/text = "del_lobby_data"
popup/item_14/id = 16
popup/item_15/text = "add_peer_data"
popup/item_15/id = 21
popup/item_16/text = "del_peer_data"
popup/item_16/id = 22
popup/item_17/text = "add_peers_data"
popup/item_17/id = 24
popup/item_18/text = "del_peers_data"
popup/item_18/id = 25
popup/item_19/text = "notify_lobby"
popup/item_19/id = 25
popup/item_20/text = "notify_peer"
popup/item_20/id = 26
popup/item_21/text = "add_lobby_tags"
popup/item_21/id = 27
popup/item_22/text = "del_lobby_tag"
popup/item_22/id = 28
popup/item_23/text = "add_peer_user_data"
popup/item_23/id = 23
popup/item_24/text = "del_peer_user_data"
popup/item_24/id = 24

[node name="Button" type="Button" parent="."]
layout_mode = 2
text = "Execute"

[node name="Logs" type="LineEdit" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Logs:"
editable = false

[node name="LobbyClient" type="LobbyClient" parent="."]
game_id = "demo"
lobby = SubResource("LobbyInfo_li3sw")
peer = SubResource("LobbyPeer_83mr0")

[connection signal="item_selected" from="CommandToggle" to="." method="_on_command_toggle_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
